--- a/views/events-index.handlebars
+++ b/views/events-index.handlebars
@@ -1,7 +1,14 @@
 <!-- events-index -->
-<h1>Events</h1>
 {{#each events}}
-<h2>{{this.title}}</h2>
-<img class="img-fluid" src="{{this.imgUrl}}" alt="Card image cap">
-<p>{{this.description}}</p>
+<div class="card mt-3">
+  <img class="card-img-top" src="{{this.imgUrl}}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{this.title}}</h5>
+    <p class="card-text">{{this.desc}}</p>
+    <div class="text-right">
+      <a href="#" class="btn btn-info">Rsvp</a>
+      <a href="#" class="btn btn-primary">View</a>
+    </div>
+  </div>
+</div>
 {{/each}}
